--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -44,14 +44,14 @@ jobs:
       - name: setup dependencies
         run: |
           export VULKAN_SDK=${{ env.INSTALL_LOCATION }}/vulkansdk-macos-1.2.135.0/macOS
-          export $VULKAN_SDK/bin/glslc
+          export GLSLC=$VULKAN_SDK/bin/glslc
           make setup
           
         # Build the app
       - name: build project
         run: |
           export VULKAN_SDK=${{ env.INSTALL_LOCATION }}/vulkansdk-macos-1.2.135.0/macOS
-          export $VULKAN_SDK/bin/glslc
+          export GLSLC=$VULKAN_SDK/bin/glslc
           make bin/app
         
         # Clean the binaries
@@ -62,5 +62,5 @@ jobs:
       - name: make bin/app CXX=g++
         run: |
           export VULKAN_SDK=${{ env.INSTALL_LOCATION }}/vulkansdk-macos-1.2.135.0/macOS
-          export $VULKAN_SDK/bin/glslc
+          export GLSLC=$VULKAN_SDK/bin/glslc
           make bin/app CXX=g++
