--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -25,6 +25,8 @@ jobs:
         # Build the app
       - name: build project
         run: |
+          ls 
+          ls vendor/Vulkan-Headers/include/vulkan
           make bin/app
         
         # Clean the binaries
