--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -18,7 +18,7 @@ jobs:
         # Setup dependencies
       - name: setup dependencies
         run: |
-          make setup-macos
+          make setup
 
         # Build the app
       - name: build project
