--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: setup dependencies
         run: |
-          make setup-linux
+          make setup
 
       - name: make bin/app
         run: |
