--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,7 +17,7 @@ jobs:
 
         # Setup dependencies
       - name: Setup dependencies
-        run: mingw32-make setup-windows
+        run: mingw32-make setup
 
         # Compile the project with dependencies
       - name: Compile Project
