--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: update apt
-        run: sudo apt-get update
+        run: |
+          sudo apt-get update
+          sudo apt-get install libwayland0
 
       - name: install glfw dependencies
         run: sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
