--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,9 +17,8 @@ jobs:
 
         # Setup dependencies
       - name: Setup dependencies
-        run: |
-          shell: cmd
-          mingw32-make setup
+        run: mingw32-make setup
+        shell: cmd
 
         # Compile the project with dependencies
       - name: Compile Project
