--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,8 +17,8 @@ jobs:
 
         # Setup dependencies
       - name: Setup dependencies
+        shell: pwsh
         run: mingw32-make setup
-        shell: cmd
 
         # Compile the project with dependencies
       - name: Compile Project
