--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - run: mingw32-make setup
+        shell: cmd
 
         # Setup dependencies
       - name: Setup dependencies
