--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - run: mingw32-make setup
-        shell: cmd
+        shell: pwsh
 
         # Setup dependencies
       - name: Setup dependencies
