--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/Vulkan-Loader"]
 	path = vendor/Vulkan-Loader
 	url = https://github.com/KhronosGroup/Vulkan-Loader.git
+[submodule "vendor/MoltenVK"]
+	path = vendor/MoltenVK
+	url = https://github.com/KhronosGroup/MoltenVK.git
