Added Macos install script and edited makefile

--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -18,7 +18,7 @@ jobs:
         # Setup dependencies
       - name: setup dependencies
         run: |
-          make setup
+          ./scripts/macos/install.sh
         # Build the app
       - name: build project
         run: |
