--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -20,12 +20,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install git build-essential libx11-xcb-dev \
           libxkbcommon-dev libwayland-dev libxrandr-dev
+
       - name: install glfw dependencies
         run: sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
 
       - name: setup dependencies
         run: |
-          make setup
+          ./scripts/linux/install.sh
+
       - name: make bin/app
         run: |
           make bin/app
