Combined macos and linux installs into a single script

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: setup dependencies
         run: |
-          ./scripts/linux/install.sh
+          ./scripts/install.sh
 
       - name: make bin/app
         run: |
